# DB-labs

./: .gitignore  Makefile  docker-compose.yaml  main.py  pyproject.toml
labs/: app.py  config.py  db.py  task.py
labs/lab1/: __init__.py  task1.py
labs/lab2/: __init__.py  task1.py  task2.py
labs/lab3/: __init__.py  load.py  save.py
labs/lab4/: __init__.py  task1.py  task2.py  task3.py  task4.py
labs/lab5/: __init__.py  task1.py  task2.py  task3.py  task4.py  task5.py
labs/lab6/: __init__.py  task1.py  task2.py  task3.py
labs/lab7/: __init__.py  task2.py  task3.py  task4.py
labs/lab8/: __init__.py  task1.py  task2.py  task3.py
labs/utils/: __init__.py  drop.py  fill1.py  fill2.py  fill3.py
sql/: drop.sql  fill_v1.sql  fill_v2.sql  fill_v3.sql
sql/migratons/0000_init/: downgrade.sql  upgrade.sql
sql/migratons/0001_create_student_profile/: downgrade.sql  upgrade.sql
sql/migratons/0002_create_view/: downgrade.sql  upgrade.sql
sql/migratons/0003_create_procedure/: downgrade.sql  upgrade.sql
sql/migratons/0004_create_functions copy/: downgrade.sql  upgrade.sql
sql/queries/: count_students_per_group.sql  cross_join.sql  full_join.sql  function_1.sql  function_2.sql  function_3.sql  get_groups.sql  get_student_marks.sql  get_students_profiles.sql  get_teachers_sort.sql  inner_join.sql  left_join.sql  procedure_2.sql  procedure_3_1.sql  procedure_3_2.sql  procedure_4_1.sql  procedure_4_2.sql  right_join.sql  view_1.sql  view_2.sql  view_3.sql
